force-app/main/default/objects/Insurance_Policy_Coverage_Lineitem__c/Insurance_Policy_Coverage_Lineitem__c.object-meta.xml
<CustomObject>
    <label>Insurance Policy Coverage Lineitem</label>
    <nameField>
        <displayFormat>IPCL-{00000000}</displayFormat>
        <label>Insurance Policy Coverage Lineitem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insurance Policy Coverage Lineitems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>