force-app/main/default/objects/Insurance_Policy_Coverage_Lineitem__c/fields/Category_Group__c.field-meta.xml
<CustomField>
    <fullName>Category_Group__c</fullName>
    <label>Category Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GL</fullName>
            </value>
            <value>
                <fullName>PAR</fullName>
            </value>
            <value>
                <fullName>MB</fullName>
            </value>
            <value>
                <fullName>BI</fullName>
            </value>
            <value>
                <fullName>MLOP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>