force-app/main/default/objects/Insurance_Policy_Coverage_Lineitem__c/fields/Category_Group_Type__c.field-meta.xml
<CustomField>
    <fullName>Category_Group_Type__c</fullName>
    <label>Category Group Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>건물</fullName>
            </value>
            <value>
                <fullName>기계</fullName>
            </value>
            <value>
                <fullName>구축물</fullName>
            </value>
            <value>
                <fullName>집기비품</fullName>
            </value>
            <value>
                <fullName>차량운반구</fullName>
            </value>
            <value>
                <fullName>공기구</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>