force-app/main/default/objects/Insurance_Policy_Coverage_Lineitem__c/fields/Coverage_Location__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Location__c</fullName>
    <label>Coverage Location</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>