force-app/main/default/objects/Insurance_Policy_Coverage_Lineitem__c/fields/Coverage_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Location_Name__c</fullName>
    <formula>Insurance_Policy_Asset__r.AssetName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coverage Location Name</label>
    <type>Text</type>
</CustomField>