force-app/main/default/objects/Insurance_Policy_Coverage_Lineitem__c/fields/Insurance_Policy_Asset__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Policy Asset</label>
    <referenceTo>InsurancePolicyAsset</referenceTo>
    <relationshipLabel>Insurance Policy Coverage Lineitems</relationshipLabel>
    <relationshipName>Insurance_Policy_Coverage_Lineitems</relationshipName>
    <type>Lookup</type>
</CustomField>