force-app/main/default/objects/Insurance_Policy_Coverage_Lineitem__c/fields/Insurance_Policy_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy_Coverage__c</fullName>
    <label>Insurance Policy Coverage</label>
    <referenceTo>InsurancePolicyCoverage</referenceTo>
    <relationshipLabel>Insurance Policy Coverage Lineitems</relationshipLabel>
    <relationshipName>Insurance_Policy_Coverage_Lineitems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>