force-app/main/default/objects/Insurance_Policy_Coverage_Lineitem__c/fields/Risk_Deductible__c.field-meta.xml
<CustomField>
    <fullName>Risk_Deductible__c</fullName>
    <label>Risk Deductible</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>