force-app/main/default/objects/Insurance_Policy_Coverage_Lineitem__c/fields/Risk_Details__c.field-meta.xml
<CustomField>
    <fullName>Risk_Details__c</fullName>
    <label>Risk Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>