force-app/main/default/objects/Insurance_Policy_Coverage_Lineitem__c/fields/Risk_Name__c.field-meta.xml
<CustomField>
    <fullName>Risk_Name__c</fullName>
    <label>Risk Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>