force-app/main/default/objects/Insurance_Policy_Coverage_Lineitem__c/fields/Risk_Premium_Amount__c.field-meta.xml
<CustomField>
    <fullName>Risk_Premium_Amount__c</fullName>
    <label>Risk Premium Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>