force-app/main/default/objects/Insurance_Policy_Coverage_Lineitem__c/fields/Risk_Rate__c.field-meta.xml
<CustomField>
    <fullName>Risk_Rate__c</fullName>
    <label>Risk Rate</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>