force-app/main/default/objects/Insurance_Policy_Coverage_Lineitem__c/fields/Risk_Type__c.field-meta.xml
<CustomField>
    <fullName>Risk_Type__c</fullName>
    <label>Risk Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>